sass for mail pages + all sheet

--- a/mail/templates/mail/cns.html
+++ b/mail/templates/mail/cns.html
@@ -1,33 +1,22 @@
 {% extends 'spa_core/base.html' %} 
 {% block content %}
-<section>
-	<p class="curs-pointer back-button" onclick=BackToIndex()>Retour Index</p>
-	
-	{% if mail %}
-	<h2 class="mt-5 mb-5 pl-5">Contenus et règles pour mail (id={{mail.mail_id}})</h2>
-	{% else %}
-	<h2 class="mt-5 mb-5 pl-5">Contenus et règles </h2>
-	{% endif %}
-	<article class=" bg-grey pt-5 pb-5">
-		<div class="row">
-			<div class="col-2"></div>
-			<div class="col-8 bg-white">
-				<div class="row">
-					<div class="col-1"></div>
-					<div class="col-10 mt-5 text-center bg-blue very-center cns-choice" id="content">Contenu du mail </div>
-					<div class="col-1"></div>
-				</div>
-				<div class="row">
-					<div class="col-1"></div>
-					<div class="col-10 mb-5 mt-5 text-center bg-blue cns-choice very-center" id="settings">Règle(s) d'envoi </div>
-					<div class="col-1"></div>
-				</div>
-			</div>
-			<div class="col-2"></div>
+<header>
 
-		</div>
-	</article>
-</section>
+	<p class=" back-button" onclick=BackToIndex()>Retour Index</p>
+	{% if mail %}
+	<h2 class="title-cns">Contenus et règles pour mail (id={{mail.mail_id}})</h2>
+	{% else %}
+	<h2 class="title-cns">Contenus et règles </h2>
+	{% endif %}
+
+</header>
+<article class="cns">
+	<div class="container-button">
+		<button class="" id="content">Contenu du mail </button>
+		<button class="" id="settings">Règle(s) d'envoi </button>
+	</div>
+</article>
+
 <script type="text/javascript">
 	content = document.getElementById('content')
 	settings = document.getElementById('settings')
@@ -37,16 +26,16 @@
 		window.location.href = "{% url 'mail:content'%}"+"/{{mail.mail_id}}"})
 	{% else%}
 	window.location.href = "{% url 'mail:content'%}"});
-	{%endif%}
-	settings.addEventListener('click', function(){
+{%endif%}
+settings.addEventListener('click', function(){
 	{% if mail %}
 	window.location.href = "{% url 'mail:settings'%}"+"/{{mail.mail_id}}";
 	{% else%}
 	alert("Ecrivez le contenu du mail pour accéder aux paramètres.")
 	{%endif%}
-	});
+});
 
-	const BackToIndex = function(){
+const BackToIndex = function(){
 	document.location.href = "{% url 'mail:index'%}"}
 </script>
 {% endblock%}
