--- a/mail/templates/mail/index.html
+++ b/mail/templates/mail/index.html
@@ -1,58 +1,59 @@
 {% extends 'spa_core/base.html' %} 
 {% block content %}
 {% load static %}
-<section>
-    <h2 class="mt-3 mb-3 pl-3">
-        Gestion Mail
-    </h2>
-    <article class="mt-3 container">
-		<div class="row  mt-3 mb-5">
-            <div class="col-5"></div>
-            {% for elem in button_value %} <!-- affiche les boutons -->
-            <div class="col-2  text-center">
-                <button id="{{elem.id}}" class="crud-contact" onclick="{{elem.function}}">{{elem.name|safe}}</button>
-            </div>
-            {% endfor %}
-            <div class="col-1"></div>
 
+<h2 class="">
+    Gestion Mail
+</h2>
+<article class="mail-index">
+  <div class="container-button">
+   {% for elem in button_value %}
+   <button id="{{elem.id}}" class='crud-sheet'>{{elem.name}}</button>
+   {% endfor %}
+
+</div>
+<form id ="mail_form" class="mail-table" action="{% url 'mail:index'%}" method="POST">
+    {% csrf_token %} 
+    <div class="mail-table-title" >
+        <div class="col-name">&nbsp;</div>
+        <div class="col-name"><strong>Nom</strong></div>
+        <div class="col-name"><strong>Envoi auto</strong></div>
+        <div class="col-name"><strong>Résumé</strong></div>
+        <div class="col-name"><strong>Condition</strong></div>
+    </div>
+    <div class="scrollable-part">
+        {%for mail in mails%}
+        <div class=" {% cycle 'row1' 'row2' %}">
+            <div class="cell" > <input type="checkbox" id='{{mail.mail_id}}' name="checkbox" value="{{mail.mail_id}}"></div>
+            <div class="cell" >{{mail.title}} </div>
+            <div class="cell" >{{mail.auto_send}}  </div>
+            <div class="cell" >{{mail.resume}}  </div>
+            <div class="last-cell" >{{mail.get_condition}}  </div>
         </div>
-		<div class="row  scrolable-y">
-			<!-- nvl ligne -->
-				<form id ="mail_form" class="w-100" action="{% url 'mail:index'%}" method="POST">
-					{% csrf_token %} 
-	                <table class="mail-index ml-1" >
-	                    <tr>
-	                        <td class="col-name"><strong>&nbsp;</td>
-	                        <td class="col-name"><strong>Nom</strong></td>
-	                        <td class="col-name"><strong>Résumé</strong></td>
-	                        <td class="col-name"><strong>Envoi auto</strong></td>
-	                        <td class="col-name"><strong>Condition</strong></td>
-	                    </tr>
-						{%for mail in mails%}
-	                    <tr class="col-12 text-center {% cycle 'row1' 'row2' %}">
-							<td >
-								<input type="checkbox" id='{{mail.mail_id}}' name="checkbox" value="{{mail.mail_id}}">
-							</td>
-							<td >{{mail.title}} </td>
-							<td >{{mail.resume}}  </td>
-							<td >{{mail.auto_send}}  </td>
-							<td >{{mail.get_condition}}  </td>
-	                    </tr>
-						{% endfor%}
-				</form>
+        {% endfor%}
+    </div>
+</form>
+</article>
 
-		</div>
-	</article>
-</section>
 {% load static%}
 <script type="text/javascript">
-	// let trRow1 = Array.from(document.getElementsByClassName('row1'));
- //    let trRow2 = Array.from(document.getElementsByClassName('row2'));
- //    allTr = trRow1.concat(trRow2)
-	const trRow1 = Array.from(document.getElementsByClassName('row1'));
+
+    //###################
+    //#### VARIABLES ####
+    //###################
+    const trRow1 = Array.from(document.getElementsByClassName('row1'));
     const trRow2 = Array.from(document.getElementsByClassName('row2'));
     const allTr = trRow1.concat(trRow2)
-	const Add = function(){
+
+    const add = document.getElementById('add')
+    const alter = document.getElementById('alter')
+    const remove = document.getElementById('remove')
+    
+    //###################
+    //#### FUNCTIONS ####
+    //###################
+
+    const Add = function(){
 		//this function redirects to page to add a new mail 
 		window.location.href="{% url 'mail:cns'%}"
 	}
@@ -67,16 +68,61 @@
             if (checkbox[i].checked){
                 id_selected = checkbox[i].id; 
                 count ++;}
+            }
+            if (count == 0){
+                alert('sélectionnez une fiche à modifier !')
+            }else if (count == 1){
+                alterPage = window.location + "cns/"+ id_selected;
+                window.location.href = alterPage; 
+            }else{
+                alert("trop de fiches sélectionnées (" + count + ").")
+            }
         }
-        if (count == 0){
-            alert('sélectionnez une fiche à modifier !')
-        }else if (count == 1){
-            alterPage = window.location + "cns/"+ id_selected;
-            window.location.href = alterPage; 
-        }else{
-            alert("trop de fiches sélectionnées (" + count + ").")
-        }
-	}
+        function Remove(){
+        //this function remove from list and db the selected mails
+        const checkbox = document.querySelectorAll('input[type=checkbox]');
+        let count = 0; 
+        let toDelete = []
+        for (i=0; i < checkbox.length; i ++){
+            if (checkbox[i].checked){
+                toDelete.push(checkbox[i]);
+                count ++;}}
+                if (count == 0){
+                    alert('sélectionnez au moins une fiche à supprimer !');
+                }else{
+                    ToDelete = Array.from(toDelete);
+                    let msg = 'Confirmez-vous la suppression de '+ count + ' éléments :';
+                    let name = "";
+                    let specie = "";
+                    for (let elem of toDelete){
+                        name = elem.parentElement.nextElementSibling.textContent;
+                        resume = elem.parentElement.nextElementSibling.nextElementSibling.textContent;
+                        msg = msg + "\n  >" + name + " - " + resume;
+                    }
+                    let response = confirm(msg);
+                    if (response){
+                     form = document.getElementById('mail_form')
+                     form.setAttribute('action', "{% url 'mail:index'%}");
+                     form.setAttribute('method', "POST");
+                     form.submit();
+                 }
+             }
+         }
+
+    //###################
+    //####   EVENT   ####
+    //###################
+
+    add.onclick = () => {
+        Add()
+    }
+    alter.onclick = () => {
+        Alter()
+    }
+    remove.onclick = () => {
+        Remove()
+    }
+
     //click on line means checkbox checked
     const ActivClickEvent = function(){
         for (tr of allTr){
@@ -102,38 +148,9 @@
         }
     }		
 
-	function Remove(){
-		//this function remove from list and db the selected mails
-        const checkbox = document.querySelectorAll('input[type=checkbox]');
-        let count = 0; 
-        let toDelete = []
-        for (i=0; i < checkbox.length; i ++){
-            if (checkbox[i].checked){
-                toDelete.push(checkbox[i]);
-                count ++;}}
-        if (count == 0){
-            alert('sélectionnez au moins une fiche à supprimer !');
-        }else{
-            ToDelete = Array.from(toDelete);
-            let msg = 'Confirmez-vous la suppression de '+ count + ' éléments :';
-            let name = "";
-            let specie = "";
-            for (let elem of toDelete){
-                name = elem.parentElement.nextElementSibling.textContent;
-                resume = elem.parentElement.nextElementSibling.nextElementSibling.textContent;
-                msg = msg + "\n  >" + name + " - " + resume;
-            }
-            let response = confirm(msg);
-            if (response){
-            	form = document.getElementById('mail_form')
-            	form.setAttribute('action', "{% url 'mail:index'%}");
-            	form.setAttribute('method', "POST");
-                form.submit();
-            }
-        }
-    }
+    
 
-	const print = function(){
+         const print = function(){
 		//this function print a mail 
 	}
 
