--- a/mail/templates/mail/overview.html
+++ b/mail/templates/mail/overview.html
@@ -2,44 +2,60 @@
 <html lang="fr">
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-  <title>SPA suivi stérilisation</title>
-  {% load static %}
-	<link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet" type="text/css" >
-	<link rel="stylesheet" href="{% static 'css/change.css'%}">
+	<title>SPA suivi stérilisation</title>
+	{% load static %}
+	<link rel="stylesheet" href="{% static 'spa_core/css/style.css'%}">
 
 
 </head>
 <body>
-<section class="">
-    <p class="curs-pointer back-button" onclick=close_window()()>Retour Index</p>
-    {% if mail %}
-        <h2 class="mt-2 pl-5">Contenu du mail <br>(id={{mail.mail_id}}, titre='{{mail.title}}') </h2>
-    {% else %}
-        <h2 class="mt-2 pl-5">Contenu du mail </h2>
-    {% endif %}
-    <article class="mt-5 container">
-			<div class="row">
-				<div class="col-12">
-					<form action="" method='post'>{% csrf_token %}
-						<div class="row">
-							{% for field in form %}
-							<div class="col-12 mb-3">{{field}} </div>
-							{% endfor%}
-						</div>
-					</form>
-				</div>
+	<div class="container-overview">
+		<header class="">
+			<p class=" back-button" onclick=close_window()()>Retour Index</p>
+			{% if mail %}
+			<h2 class="">Aperçu du contenu du mail <br><span class="title-info">
+			(id={{mail.mail_id}}, titre='{{mail.title}}') </span></h2>
+
+			{% else %}
+			<h2 class="">Aperçu du contenu du mail </h2>
+			{% endif %}
+		</header>
+		<form id="form_mail_skull" class="overview" action="" method='post'>
+			{% csrf_token %}
+			{%for field in form%}
+			{% for error in field.errors %}
+			<div class="alert alert-danger">
+				<strong>{{field.label}} {{ error|escape }}</strong>
 			</div>
-	</article>
-</section>
-<script type="text/javascript">
-	let close_window = function(){
+			{% endfor %}
+			<div class="field">{{field}} </div>
+			{% endfor %}
+		</form>
+		<div class="container-button">
+			<button id ="close-window" class="close-window">Fermer</button>
+		</div>
+	</div>
+	<script type="text/javascript">
+
+		//variables 
+		closeBtn = document.getElementById('close-window')
+
+		//functions
+		const close_window = function(){
 			close(); 
 		}
-	document.getElementById('plain_text').rows = 8
-</script>
-</body>
+		const BackToIndex = function(){
+			document.location.href = "{% url 'mail:index'%}"
+		}
+		//events
+		closeBtn.onclick = () => {
+			close_window()
+		}
+		
+		</script>
+	</body>
