--- a/sheet/templates/sheet/index.html
+++ b/sheet/templates/sheet/index.html
@@ -7,9 +7,7 @@
             <button id="display">Afficher PROPRIETAIRES</button>
         </div>
         <div class="container-button-cud">
-            {% for elem in button_value %}
-            <button id="{{elem.id}}" class='crud-sheet'>{{elem.name}}</button>
-            {% endfor %}
+            {% include "./libs/cud_btn.html"%}
         </div>
     </div>
     <form id="my_form" name="my_form">
@@ -70,7 +68,7 @@
 </article>
 
 <script type="text/javascript">  
-
+    
     //###################
     //#### VARIABLES ####
     //###################
@@ -79,14 +77,14 @@
     const trRow2 = Array.from(document.getElementsByClassName('row2'));
     const allTr = trRow1.concat(trRow2)
     const form = document.getElementById('my_form');
+
     const displayBtn = document.getElementById('display')
     const createBtn = document.getElementById("create")    
-    const updateBtn = document.getElementById("update")
-    const deletionBtn = document.getElementById("delete")    
-    let addBut = document.getElementById('create')
-    let alterBut = document.getElementById('update')
-    let removeBut = document.getElementById('delete')
+    const updateBtn = document.getElementById("update")  // select + CTRLD > const Alter
+    const deletionBtn = document.getElementById("delete")   // select + CTRLD > const Remove
+
     let title = document.getElementById('title')
+
 
 
     //###################
@@ -95,19 +93,25 @@
 
     
 
-    const Alter = () => {
+    const Alter = (given_id=null) => {
         //throws user to update page 
-        checkboxes = document.querySelectorAll('input[type=checkbox]');
-        result = GetSelectedCheckbox(checkboxes)
-        
-        if (result.count == 0){
-            alert('sélectionnez une fiche à modifier !')
-        }else if (result.count == 1){
-            isForAnimal() ? alterpage = "{%url 'sheet:alter' 123 %}".replace("123", result.idSelected) 
-            : alterpage = "{%url 'sheet:alter_owner' 123 %}".replace("123", result.idSelected)
-            window.location.href = alterpage   
-        }else{
-            alert("trop de fiches sélectionnées (" + result.count + ").")
+        canAlter = true
+        if(given_id == null ){
+            canAlter = false
+            checkboxes = document.querySelectorAll('input[type=checkbox]');
+            result = GetSelectedCheckbox(checkboxes)
+            given_id = result.idSelected
+            result.count == 0 ? alert('sélectionnez une fiche à modifier !') : "";
+            result.count > 1 ?  alert("trop de fiches sélectionnées (" + result.count + ").") : "";
+            (result.count == 1) ? canAlter = true :canAlter = false
+        }
+        console.log(canAlter + "/ani : " + isForAnimal())
+        if (canAlter && isForAnimal()){
+            url_open = "{% url 'sheet:alter' 123%}".replace('123', given_id)
+            window.location.href = url_open
+        }else if (canAlter && !isForAnimal()){
+            url_open = "{% url 'sheet:alter_owner_open' 123%}".replace('123', given_id)
+            OpenSmallPageOwner(url_open) 
         }
     }
 
@@ -138,9 +142,9 @@
         //display owner and change button value
         displayBtn.classList.toggle('bg-primary')   
         displayBtn.classList.toggle('owner-part')  
-        addBut.classList.toggle('owner-part')  
-        alterBut.classList.toggle('owner-part')  
-        removeBut.classList.toggle('owner-part')  
+        createBtn.classList.toggle('owner-part')  
+        updateBtn.classList.toggle('owner-part')  
+        deletionBtn.classList.toggle('owner-part')  
         if (displayBtn.textContent == "Afficher PROPRIETAIRES"){
             ChangeInterface("owner", "anim")  
         }else{
@@ -169,7 +173,7 @@
         let listId = []
         let listIdFinal = []
         for (checkbox of listCheckboxes){
-            
+
             if (checkbox.checked){
                 listId.push(checkbox.id)
                 count ++;
@@ -181,17 +185,17 @@
             return {idSelected: idSelected, count: count}
 
             //many elems > for deletion
-            }else{
-                
-                
-                for (id of listId){
-                    id.slice(0,2) == "ow" ? idSelected = id.slice(2,10) : idSelected = id
-                    listIdFinal.push(idSelected)
-                }
-                return {idSelected: listIdFinal, count: count}
-            }
+        }else{
 
+
+            for (id of listId){
+                id.slice(0,2) == "ow" ? idSelected = id.slice(2,10) : idSelected = id
+                listIdFinal.push(idSelected)
+            }
+            return {idSelected: listIdFinal, count: count}
         }
+
+    }
 
     const DeleteAnimals = (toDelete, msg) =>{
         //remove animal from list
@@ -209,7 +213,7 @@
 
     const DeleteOwners = (toDelete, msg) => {
         for (elemId of toDelete){
-            
+
             nb_anim = document.getElementById('id_nb_'+elemId).textContent
             name = document.getElementById('id_name_'+elemId).textContent
             surname = document.getElementById('id_surname_'+elemId).textContent
@@ -241,16 +245,15 @@
             let response = false
             if (isForAnimal()){
                 response = DeleteAnimals(toDelete, msg)
-                if (response){
-                    form.setAttribute('action', "{% url 'sheet:index' own=0%}");
-                }
+                form.setAttribute('action', "{% url 'sheet:index' own=0%}");
+                
             }else{
                 let nb_animaux
                 let surname
                 response = DeleteOwners(toDelete, msg)
+                form.setAttribute('action', "{% url 'sheet:index' own=1%}");
             }
             if (response){
-                form.setAttribute('action', "{% url 'sheet:index' own=1%}");
                 form.setAttribute('method', "POST");
                 console.log("j'envoie les données")
                 form.submit()
@@ -270,9 +273,14 @@
     }
 
     createBtn.onclick = () =>{
-        isForAnimal() ? add_page = "{% url 'sheet:add' %}" : add_page = "{% url 'sheet:add_owner' %}"
-        window.location.href = add_page; 
-
+        console.log('create')
+        if (isForAnimal()){
+            add_page = "{% url 'sheet:add' %}" 
+            window.location.href = add_page
+        }else{
+            url_open = "{% url 'sheet:add_owner_open'%}"; 
+            OpenSmallPageOwner(url_open)
+            }
     }
 
     updateBtn.onclick = () =>{
@@ -289,7 +297,7 @@
         tr.splice(0,1)
         for (child of tr){
             child.onclick = function(e){
-                
+
                 let target = e.target.parentElement.children[0].children[0];
                 
                 if (target.checked == true){
@@ -305,10 +313,7 @@
                 
                 target.id.slice(0,2) == "ow" ? idSelected = target.id.slice(2,10) : idSelected = target.id
                 
-                isForAnimal() ? 
-                alterpage = "{%url 'sheet:alter' 123 %}".replace("123", idSelected) 
-                : alterpage = "{%url 'sheet:alter_owner' 123 %}".replace("123", idSelected)
-                window.location.href = alterpage 
+                Alter(idSelected)
                 
             };
         }
