--- a/spa_core/static/spa_core/css/split/sheet-index.scss
+++ b/spa_core/static/spa_core/css/split/sheet-index.scss
@@ -1,8 +1,3 @@
-
-.content-centered{
-	display:grid; 
-	place-items: center; 
-}
 .btn-sheet-index{
 	height: 2rem;
 	font-size: 1.2rem; 
@@ -39,25 +34,7 @@
 					background-color: $third_color; 
 				}
 			}
-			.container-button-cud{
-				grid-column: 2; 
-				display: flex;
-				flex-wrap: wrap;
-				justify-content: center;
-				button{
-					flex: 0 1 7rem; /*  No stretching: */
-					margin: auto 2rem;
-					@extend .btn-sheet-index;
-					&:hover{
-						background-color: $primary;
-					}
-				}
-				.owner-part{
-					&:hover{
-						background-color: $third_color;
-					}
-				}
-			}
+			@include load-container-button-cud(); 
 		}
 		form{
 			margin-top: 1rem;
